# neurokit

./: .gitignore  README.md  pyproject.toml
neurokit/models/: lstm_model.py
neurokit/utils/: data_frame_processor.py
